refactor: LOTTO_PRICE 상수화